# agent-lens

./: .eslintrc.json  .gitignore  CLAUDE.md  NEXT_PHASES_PLAN.md  PROFILE.md  README.md  SECURITY.md  agent-lens.code-workspace  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: python-ci.yml
docs/: AGENTLENS_PRD.md  ARLS_SPEC.md
examples/anthropic-basic/: index.ts  package.json
examples/tool-calling/: index.ts  package.json
python/: PYTHON_SDK.md  pyproject.toml
python/agentlens/: .coverage  README.md  pyproject.toml
python/agentlens-cli/: .coverage  README.md  pyproject.toml
python/agentlens-cli/agentlens_cli/: __init__.py  main.py
python/agentlens-cli/agentlens_cli/commands/: __init__.py  analyze.py  init.py  trace.py
python/agentlens-cli/tests/: __init__.py  test_commands.py
python/agentlens-core/: .coverage  README.md  pyproject.toml
python/agentlens-core/agentlens_core/: __init__.py  context.py  costs.py  errors.py  event_builder.py  schema.py
python/agentlens-core/tests/: __init__.py  test_context.py  test_costs.py  test_errors.py  test_event_builder.py  test_schema.py
python/agentlens-interceptors/: .coverage  README.md  pyproject.toml
python/agentlens-interceptors/agentlens_interceptors/: __init__.py  anthropic.py  langchain.py  openai.py  tool.py
python/agentlens-interceptors/tests/: __init__.py  test_anthropic.py  test_langchain.py  test_openai.py  test_tool.py
python/agentlens-privacy/: .coverage  README.md  pyproject.toml
python/agentlens-privacy/agentlens_privacy/: __init__.py  detectors.py  redactor.py
python/agentlens-privacy/tests/: __init__.py  test_detectors.py  test_redactor.py
python/agentlens-renderer/: .coverage  README.md  pyproject.toml
python/agentlens-renderer/agentlens_renderer/: __init__.py  ai.py  human.py
python/agentlens-renderer/tests/: __init__.py  test_ai_renderer.py  test_human_renderer.py
python/agentlens-transport/: .coverage  README.md  pyproject.toml
python/agentlens-transport/agentlens_transport/: __init__.py  base.py  console.py  file.py
python/agentlens-transport/tests/: __init__.py  test_base_transport.py  test_console_transport.py  test_file_transport.py
python/agentlens/agentlens/: __init__.py
python/agentlens/tests/: __init__.py  test_agentlens.py
python/examples/: README.md  anthropic_basic.py  tool_calling.py
tools/schema-codegen/: generate.ts  package.json
