[tool.poetry]
name = "agentlens-interceptors"
version = "0.1.0"
description = "AgentLens interceptors - SDK wrappers for Anthropic, OpenAI, and LangChain"
authors = ["AgentLens Contributors <hello@agentlens.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/anthropics/agentlens"

[tool.poetry.dependencies]
python = "^3.11"
agentlens-core = { path = "../agentlens-core", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"
anthropic = "^0.25.0"
openai = "^1.40.0"
langchain-core = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
