[tool.poetry]
name = "agentlens-privacy"
version = "0.1.0"
description = "AgentLens privacy engine - PII detection and redaction"
authors = ["AgentLens Contributors <hello@agentlens.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/anthropics/agentlens"

[tool.poetry.dependencies]
python = "^3.11"
agentlens-core = { path = "../agentlens-core", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
