[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agentlens"
version = "1.0.0"
description = "AI agent observability — structured logging for LLM calls, tool calls, and reasoning steps"
authors = ["AgentLens Contributors <hello@agentlens.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/akashs101199/agent-lens"
packages = [{ include = "agentlens" }]

[tool.poetry.dependencies]
python = "^3.11"
agentlens-core = { path = "../agentlens-core" }
agentlens-interceptors = { path = "../agentlens-interceptors" }
agentlens-privacy = { path = "../agentlens-privacy" }
agentlens-renderer = { path = "../agentlens-renderer" }
agentlens-transport = { path = "../agentlens-transport" }

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.8"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
anthropic = "^0.31.0"
openai = "^1.14.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["agentlens"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "^\\s*pass\\s*$",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain.*"
ignore_missing_imports = true
